update properries
