# swagger.yaml
@@ -117,6 +117,7 @@ paths:
                       access_token:
                         type: string
                         example: "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkpvaG4gRG9lIiwiaWF0IjoxNTE2MjM5MDIyfQ.SflKxwRJSMeKKF2QT4fwpMeJf36POk6yJV_adQssw5c"
+  
   "/users":
     post:
       operationId: createUser
@@ -261,6 +262,65 @@ paths:
           "application/json":
             schema:
               $ref: "#components/schemas/User"
+      responses:
+        "200":
+          description: Update user info!
+          content:
+            "application/json":
+              schema:
+                type: object
+                properties:
+                  code:
+                    type: integer
+                    format: int32
+                    example: 200
+                  message:
+                    type: string
+                    example: Retrieved a data, Successfully!
+                  data:
+                    type: object
+                    allOf:
+                      - $ref: "#components/schemas/UserCommon"
+                      - $ref: "#components/schemas/Timestamp"
+        "400":
+          $ref: "#/components/responses/400"
+        "500":
+          "$ref": "#/components/responses/500"
+    patch:
+      operationId: updateUser
+      security:
+        - bearerAuth: []
+      description: only update Status, Roles
+      tags:
+        - "User"
+      parameters:
+        - $ref: "#/components/parameters/idPathParam"
+      requestBody:
+        content:
+          "application/json":
+            schema:
+              # oneOf:
+              #     - required:
+              #         - roles
+              #       properties:
+              #         roles:
+              #           type: array
+              #           items:
+              #             type: string
+              #     - required:
+              #         - status
+              #       properties:
+              #         status:
+              #           type: string
+              #           enum: ["active", "inactive", "pending"]
+              properties:
+                roles:
+                  type: array
+                  items:
+                    type: string
+                status:
+                  type: string
+                  enum: ["active", "inactive", "pending"]
       responses:
         "200":
           description: Update user info!
@@ -548,6 +608,10 @@ components:
         phone_number:
           type: string
           example: 019xxxxxxxxx
+        roles:
+          type: array
+          items:
+            type: string
         # password:
         #   type: string
         #   format: password
